--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "express-validator": "^6.14.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
