--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
+    "basic-auth": "^2.0.1",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "express-validator": "^6.14.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/node": "^18.7.18",
     "nodemon": "^2.0.20",
