--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "basic-auth": "^2.0.1",
     "cors": "^2.8.5",
     "express": "^4.18.1",
-    "express-validator": "^6.14.2"
+    "express-validator": "^6.14.2",
+    "mongodb": "^4.10.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
